Refactors genreSelector.js including using switch block over if else block. Renames expander class to hamburger, and adds expander class to all elements which expand genre-pills. Corrects genre-pill expansion css on mobile. Removes bottom sheet class.

--- a/stylesheets/genre-pills-mobile.css
+++ b/stylesheets/genre-pills-mobile.css
@@ -3,33 +3,28 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        bottom: 31px;
+        bottom: 0;
         top: unset;
         left: unset;
         padding: 0;
         margin: 0;
         min-width: 100vw;
         transition: max-height 0.8s, bottom 0.8s;
+        border-top-left-radius: 100px;
+        border-top-right-radius: 100px;
     }
 
-    .bottom-sheet {
-        min-height: 7rem;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-    }
-
-    .genre-pill-header > .expander > span {
+    .genre-pill-header > .hamburger > span {
         height: 6px;
         width: 45px;
     }
 
-    .genre-pill-header > .expander > span:nth-child(1).fold {
+    .genre-pill-header > .hamburger > span:nth-child(1).fold {
         -webkit-transform: rotate(-45deg) translate(-10px, 9px);
         transform: rotate(-45deg) translate(-10px, 8px);
     }
     
-    .genre-pill-header > .expander > span:nth-child(3).fold {
+    .genre-pill-header > .hamburger > span:nth-child(3).fold {
         -webkit-transform: rotate(45deg) translate(-4px, -3px);
         transform: rotate(45deg) translate(-7px, -6px);
     }
@@ -39,33 +34,27 @@
     }
 
     .collapsed {
-        background-color: white;
-        max-height: 5rem;
+        max-height: 7.5rem;
     }
 
     .expanded {
         max-height: 25rem;
-        bottom: 0;
         border: black solid;
-        border-top-right-radius: 130px;
-        border-top-left-radius: 130px;
-        padding: 0 1.5rem 1.5rem;
     }
 
     .genre-pill-header {
         color: white;
         display: flex;
         align-items: center;
-        padding: 1.8rem 0;
+        margin-bottom: 2rem;
+        padding: 1rem 0;
         width: unset;
         min-width: 100vw;
-        border-top-left-radius: 100px;
-        border-top-right-radius: 100px;
-        font-size: 3rem;
+        font-size: 5rem;
         transition: border-radius 0.8s, background-color 0.8s, color 0.2s;
     }
 
-    .genre-pill {
+    .genre-pill, .genre-pill-reset {
         margin-top: 1.5rem;
         margin-left: 1rem;
         min-height: 5rem;
