--- a/stylesheets/header.css
+++ b/stylesheets/header.css
@@ -4,7 +4,7 @@ header {
     margin: 2rem;
 }
 
-.expander > span {
+.hamburger > span {
     width: 25px;
     height: 4px;
     background-color: black;
@@ -14,17 +14,17 @@ header {
     transition: all 0.2s;
 }
 
-.expander > span:nth-child(1).fold {
+.hamburger > span:nth-child(1).fold {
     -webkit-transform: rotate(-45deg) translate(-10px, 9px);
     transform: rotate(-45deg) translate(-10px, 9px);
 }
 
-.expander > span:nth-child(2).fold {
+.hamburger > span:nth-child(2).fold {
     opacity: 0;
     width: 0px;
 }
 
-.expander > span:nth-child(3).fold {
+.hamburger > span:nth-child(3).fold {
     -webkit-transform: rotate(45deg) translate(-4px, -3px);
     transform: rotate(45deg) translate(-4px, -3px);
 }
